  * disabled caching of files without a content-type to solve the 
    aggressive caching of FF
  * remove trailing white-spaces from HTTP-requests before parsing (#1098)
  * fixed accesslog.use-syslog in a conditional and the caching of the
    accesslog for files (fixes #1064)
  * fixed various crashes at startup on broken accesslog.format strings (#1000)
  * fixed handling of %% in accesslog.format 


- 1.4.13 - 2006-10-09

  * added initgroups in spawn-fcgi (#871)
  * added apr1 support htpasswd in mod-auth (#870)
  * added lighty.stat() to mod_magnet
  * fixed segfault in splitted CRLF CRLF sequences 
    (introduced in 1.4.12) (#876)
  * fixed compilation of LOCK support in mod-webdav
  * fixed fragments in request-URLs (#869)
  * fixed pkg-config check for lua5.1 on debian
  * fixed Content-Length = 0 on HEAD requests without 
    a known Content-Length (#119)
  * fixed mkdir() forcing 0700 (#884)
  * fixed writev() on FreeBSD 4.x and older (#875)
  * removed warning about a 404-error-handler 
    returned 404
  * backported and fixed the buildsystem changes for
    webdav locks
  * fixed plugin loading so we can finally load lua
    extensions in mod_magnet scripts
  * fixed large uploads if xattr is enabled

- 1.4.12 - 2006-09-23

  * added experimental LOCK support for webdav
  * added Content-Range support for PUT in webdav
  * added support for += on empty arrays in config-files
  * added ssl.cipher-list and ssl.use-sslv2
  * added $HTTP["querystring"] conditional
  * added mod_magnet as long-term replacement for mod_cml
  * added work-around for a Opera Bug with SSL + Chunked-Encoding
  * changed --print-config to print to stdout instead of stderr
  * changed no longer use 0600 for new files with webdav. umask is
    honored. Make sure you have set a proper umask.
  * fixed upload hangs with SSL
  * fixed connection drops with SSL (aka bad retry)
  * fixed path traversal with \ on cygwin
  * fixed mem-leak in mod_flv_streaming