@@ -29,7 +29,8 @@ NEWS
   * fixed accesslog.use-syslog in a conditional and the caching of the
     accesslog for files (fixes #1064)
   * fixed various crashes at startup on broken accesslog.format strings (#1000)
-  * fixed handling of %% in accesslog.format 
+  * fixed handling of %% in accesslog.format
+  * fixed conditional dir-listing.exclude (#930)
 
 
 - 1.4.13 - 2006-10-09
